examples/test/testpolicy10907.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10907
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key2: value44
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value9
          key23: value10
      podSelector:
        matchLabels:
          key14: value27
          key4: value45
